<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/activity_padding"
    android:orientation="vertical"
    tools:context="com.example.masrobot.myflexiblefragmentkotlin.DetailCategoryFragment">

    <TextView
        android:id="@+id/tv_category_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/category_name"
        android:layout_marginBottom="@dimen/activity_horizontal_margin" />
    <TextView
        android:id="@+id/tv_category_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/category_description"
        android:layout_marginBottom="@dimen/activity_horizontal_margin" />
    <Button
        android:id="@+id/btn_profile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ke_halaman_activity" />
    <Button
        android:id="@+id/btn_show_dialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tampilkan_sebuah_dialog" />

</LinearLayout>
